--- a/web-developer.html
+++ b/web-developer.html
@@ -38,7 +38,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
+<h5><a href='https://ticketino.join.com/jobs/464054-senior-web-developer-net'>Job @ TICKETINO (Z?rich): Senior Web Developer .NET | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Canada  Canada  Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -50,7 +54,7 @@
 <p><span class="badge badge-light">Philadelphia, PAUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -213,7 +217,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -261,7 +265,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6977675/trainee-web-developer/?LinkSource=SEOLandingPageListing'>Trainee Web Developer job with TALENT SPA | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6977675/trainee-web-developer/?LinkSource=SEOLandingPageListing'>Trainee Web Developer job with TALENT SPA | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -273,7 +277,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://syone2.recruitee.com/o/ref-6822019-python-developers-and-web-developers'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6822019-python-developers-and-web-developers'>
       (Ref. 682/2019) - Python Developers and Web Developers - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal  Lisbon</span></p>
@@ -353,7 +357,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
+<h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
 	Front-End Web Designer/Developer - HellermannTyton - Big Shoes Network, Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -389,7 +393,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oB919fwE&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=ny7glMwx'>Compuware Careers - Senior Front-End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oB919fwE&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=ny7glMwx'>Compuware Careers - Senior Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -417,7 +421,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/vitamin-world-looking-for-senior-web-developer-remote-opportunity/'>Vitamin World looking for Senior Web Developer (Remote Opportunity!)</a></h5> 
+<h5><a href='https://dedeleads.com/job/vitamin-world-looking-for-senior-web-developer-remote-opportunity/'>Vitamin World looking for Senior Web Developer (Remote Opportunity!)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -425,7 +429,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -446,16 +450,12 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1920428'>Job Application for Java Web Developer at AKQA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1920428'>Job Application for Java Web Developer at AKQA</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/spins/jobs/1931961'>Job Application for Jr Front-End Web Developer (Sherman Oaks) at SPINS, LLC</a></h5> 
 <p><span class="badge badge-light">Sherman Oaks, CA</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/oliverusa/jobs/1852940'>Job Application for Web Content Developer at OLIVER North America</a></h5> 
-<p><span class="badge badge-light">North America  North America Atlanta, GA  Charlotte, NC</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
