--- a/ux.html
+++ b/ux.html
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
+<h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -161,11 +161,11 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zenloopgmbh.recruitee.com/l/de/o/uxui-designer-fmd'>
+<h5><a href='https://zenloopgmbh.recruitee.com/l/de/o/uxui-designer-fmd'>
       UX/UI Designer (f/m/d) - zenloop GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
@@ -271,7 +271,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -339,7 +339,7 @@
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.travelweekly.co.uk/job/172594/luxury-travel-consultant/?TrackID=174884'>LUXURY TRAVEL CONSULTANT job with C&amp;M Travel Recruitment Ltd | 172594</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.travelweekly.co.uk/job/172594/luxury-travel-consultant/?TrackID=174884'>LUXURY TRAVEL CONSULTANT job with C&amp;M Travel Recruitment Ltd | 172594</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -367,7 +367,7 @@
 <p><span class="badge badge-light">Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
 <p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -463,7 +463,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/fb00c0d4-45d0-4200-b618-5ab34c8baa1e'>Netflix - Senior Product UX Researcher, Growth & Customer Health</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/fb00c0d4-45d0-4200-b618-5ab34c8baa1e'>Netflix - Senior Product UX Researcher, Growth & Customer Health</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
