--- a/biostatistics.html
+++ b/biostatistics.html
@@ -197,7 +197,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -323,7 +323,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1826465'>Job Application for Head of Biostatistics, Immunovant at Roivant Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1826465'>Job Application for Head of Biostatistics, Immunovant at Roivant Sciences</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -396,7 +396,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
-<h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
@@ -433,7 +433,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-jax.icims.com/jobs/27053/statistician-ii---kumar-lab/job'>Biostatistician II in Bar Harbor, Maine | Careers at BHME- Bar Harbor ...</a></h5> 
+<h5><a href='https://careers-jax.icims.com/jobs/27053/statistician-ii---kumar-lab/job'>Biostatistician II in Bar Harbor, Maine | Careers at BHME- Bar Harbor ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... BHME- Bar Harbor, Maine is now hiring a Biostatistician II in Bar Harbor, Maine. 
 Review all of the job details and apply today!</p>
@@ -443,7 +443,7 @@ Review all of the job details and apply today!</p>
 <p>Jul 29, 2019 ... ... of methodology; Develop predictive capabilities for Alkahest's scientific areas 
 of focus, using the appropriate statistical and machine learning methodologies?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
